--- a/form.html
+++ b/form.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <form method="post">
+        <fieldset>
+            <legend>
+                Add Comment
+            </legend>
+            <div>
+                <label for="Name">Name</label>
+                <input type="text" id="Name" name="Name">
+            </div>
+            <div>
+                <label for="Email">Email</label>
+                <input type="email" id="Email" name="E-Mail">
+            </div>
+            <div>
+                <input type="checkbox" name="consent" id="consent">
+                <label for="consent">I consent to my details being stored</label>
+            </div>
+            <div>
+                <label for="comment">Comment:</label>
+                <textarea id="comment" name="comment" rows="10" columns="10">
+                </textarea>
+            </div>
+            <div>
+                <input type="submit" value="Submit">
+            </div>
+        </fieldset>
+    </form>
 </body>
 </html>
