--- a/form.html
+++ b/form.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Comment</li>
+            <li>Useful links</li>
+            <li>Gallery</li>
+        </ul>
+    </nav>
     <form method="post">
         <fieldset>
             <legend>
