--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Comment</li>
+            <li>Useful links</li>
+            <li>Gallery</li>
+        </ul>
+    </nav>
 </body>
 </html>
