Add anchor tags and hrefs to all navbar links on all pages

--- a/image-page.html
+++ b/image-page.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./form.html">Comment</a></li>
+            <li><a href="./links.html">Useful Links</a></li>
+            <li><a href="./image-page.html">Gallery</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
