--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Comment</li>
-            <li>Useful links</li>
-            <li>Gallery</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./form.html">Comment</a></li>
+            <li><a href="./links.html">Useful Links</a></li>
+            <li><a href="./image-page.html">Gallery</a></li>
         </ul>
     </nav>
 </body>
