Style navbar with black background, white text and remove bullets and text decoration

--- a/links.html
+++ b/links.html
@@ -16,6 +16,11 @@
             <li><a href="./image-page.html">Gallery</a></li>
         </ul>
     </nav>
-
+    <article>
+        <h1>Useful Programming Resources and Links</h1>
+        <ul>
+            <li></li>
+        </ul>
+    </article>
 </body>
 </html>
