--- a/links.html
+++ b/links.html
@@ -18,9 +18,37 @@
     </nav>
     <article>
         <h1>Useful Programming Resources and Links</h1>
-        <ul>
-            <li></li>
-        </ul>
+        <ol>
+            <li><a href="https://github.com">GitHub</a></li>
+            <ul>
+                <li>GitHub is a fantastic resource for hosting your code and
+                keeping a log of changes to your repositories</li>
+                <li>It's also completely free! Just register and get started
+                right away</li>
+                <li>GitHub also allows you to host your projects and pages,
+                making it great as a portfolio of your work</li>
+            </ul>
+            <li><a href="https://www.w3schools.com">W3Schools</a></li>
+            <ul>
+                <li>W3Schools is the world's "largest web developer site"</li>
+                <li>It's full of information, examples and guidance on different
+                elements and commands you can use in your code</li>
+                <li>It covers a wide range of languages, packages and concepts including:</li>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <li>PHP</li>
+                    <li>jQuery</li>
+                    <li>Java</li>
+                    <li>C++</li>
+                    <li>Bootstrap</li>
+                    <li>And many more!</li>
+                </ul>
+            </ul>
+        </ol>
     </article>
 </body>
 </html>
