Add section on MDN to useful links page

--- a/links.html
+++ b/links.html
@@ -48,6 +48,18 @@
                     <li>And many more!</li>
                 </ul>
             </ul>
+            <li><a href="https://developer.mozilla.org/">Mozilla Developer
+            Network</a></li>
+            <ul>
+                <li>Similar to W3Schools, MDN contains detailed information and
+                documentation on various languages</li>
+                <li>Each concept is presented with examples, interactive
+                exercises and an explanation of the parameters and attributes
+                associated with that concept</li>
+                <li>Moreover, MDN presents guidelines and recommendations for
+                things to keep in mind that can help you follow best practice
+                when designing, developing and implementing your programs</li>
+            </ul>
         </ol>
     </article>
 </body>
