--- a/links.html
+++ b/links.html
@@ -60,6 +60,16 @@
                 things to keep in mind that can help you follow best practice
                 when designing, developing and implementing your programs</li>
             </ul>
+            <li><a href="https://devhints.io/">DevHints</a></li>
+            <ul>
+                <li>DevHits has a wealth of cheatsheets covering a huge variety
+                of languages and concepts from appache to znc</li>
+                <li>These Cheatsheets contain examples, explanations and useful
+                pointers things like types, control flow and functions</li>
+                <li>There are over 357 cheatsheets and they're subdivided into
+                concepts such as "C-like languages", popularity and also
+                alphabetically by language on the main page</li>
+            </ul>
         </ol>
     </article>
 </body>
