Add Exercism section to useful links

--- a/links.html
+++ b/links.html
@@ -70,6 +70,17 @@
                 concepts such as "C-like languages", popularity and also
                 alphabetically by language on the main page</li>
             </ul>
+            <li><a href="https://exercism.io/">Exercism</a></li>
+            <ul>
+                <li>Exercism is a website full of exercises that give you the
+                chance to practice your programming skills while problem solving
+                and thinking critically</li>
+                <li>It has 61 different languages with hundreds of different
+                exercises for each</li>
+                <li>These exercises are also arranged into a tree of concepts
+                ensuring you get experience with all elements of a language,
+                while also allowing you to focus on specific parts if you wish</li>
+            </ul>
         </ol>
     </article>
 </body>
