Wrap link content in div, add display: flex and centre

--- a/links.html
+++ b/links.html
@@ -17,71 +17,74 @@
         </ul>
     </nav>
     <article>
-        <h1>Useful Programming Resources and Links</h1>
-        <ol>
-            <li><a href="https://github.com">GitHub</a></li>
-            <ul>
-                <li>GitHub is a fantastic resource for hosting your code and
-                keeping a log of changes to your repositories</li>
-                <li>It's also completely free! Just register and get started
-                right away</li>
-                <li>GitHub also allows you to host your projects and pages,
-                making it great as a portfolio of your work</li>
-            </ul>
-            <li><a href="https://www.w3schools.com">W3Schools</a></li>
-            <ul>
-                <li>W3Schools is the world's "largest web developer site"</li>
-                <li>It's full of information, examples and guidance on different
-                elements and commands you can use in your code</li>
-                <li>It covers a wide range of languages, packages and concepts including:</li>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>Python</li>
-                    <li>SQL</li>
-                    <li>PHP</li>
-                    <li>jQuery</li>
-                    <li>Java</li>
-                    <li>C++</li>
-                    <li>Bootstrap</li>
-                    <li>And many more!</li>
-                </ul>
-            </ul>
-            <li><a href="https://developer.mozilla.org/">Mozilla Developer
-            Network</a></li>
-            <ul>
-                <li>Similar to W3Schools, MDN contains detailed information and
-                documentation on various languages</li>
-                <li>Each concept is presented with examples, interactive
-                exercises and an explanation of the parameters and attributes
-                associated with that concept</li>
-                <li>Moreover, MDN presents guidelines and recommendations for
-                things to keep in mind that can help you follow best practice
-                when designing, developing and implementing your programs</li>
-            </ul>
-            <li><a href="https://devhints.io/">DevHints</a></li>
-            <ul>
-                <li>DevHits has a wealth of cheatsheets covering a huge variety
-                of languages and concepts from appache to znc</li>
-                <li>These Cheatsheets contain examples, explanations and useful
-                pointers things like types, control flow and functions</li>
-                <li>There are over 357 cheatsheets and they're subdivided into
-                concepts such as "C-like languages", popularity and also
-                alphabetically by language on the main page</li>
-            </ul>
-            <li><a href="https://exercism.io/">Exercism</a></li>
-            <ul>
-                <li>Exercism is a website full of exercises that give you the
-                chance to practice your programming skills while problem solving
-                and thinking critically</li>
-                <li>It has 61 different languages with hundreds of different
-                exercises for each</li>
-                <li>These exercises are also arranged into a tree of concepts
-                ensuring you get experience with all elements of a language,
-                while also allowing you to focus on specific parts if you wish</li>
-            </ul>
-        </ol>
+        <section class="links">
+            <h1>Useful Programming Resources and Links</h1>
+            <div class="link-list">
+                <ol>
+                    <li><a href="https://github.com"><h2 class="resource">GitHub</h2></a></li>
+                    <ul>
+                        <li>GitHub is a fantastic resource for hosting your code and
+                        keeping a log of changes to your repositories</li>
+                        <li>It's also completely free! Just register and get started
+                        right away</li>
+                        <li>GitHub also allows you to host your projects and pages,
+                        making it great as a portfolio of your work</li>
+                    </ul>
+                    <li><a href="https://www.w3schools.com"><h2 class="resource">W3Schools</h2></a></li>
+                    <ul>
+                        <li>W3Schools is the world's "largest web developer site"</li>
+                        <li>It's full of information, examples and guidance on different
+                        elements and commands you can use in your code</li>
+                        <li>It covers a wide range of languages, packages and concepts including:</li>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Python</li>
+                            <li>SQL</li>
+                            <li>PHP</li>
+                            <li>jQuery</li>
+                            <li>Java</li>
+                            <li>C++</li>
+                            <li>Bootstrap</li>
+                            <li>And many more!</li>
+                        </ul>
+                    </ul>
+                    <li><a href="https://developer.mozilla.org/"><h2 class="resource">Mozilla Developer Network</h2></a></li>
+                    <ul>
+                        <li>Similar to W3Schools, MDN contains detailed information and
+                        documentation on various languages</li>
+                        <li>Each concept is presented with examples, interactive
+                        exercises and an explanation of the parameters and attributes
+                        associated with that concept</li>
+                        <li>Moreover, MDN presents guidelines and recommendations for
+                        things to keep in mind that can help you follow best practice
+                        when designing, developing and implementing your programs</li>
+                    </ul>
+                    <li><a href="https://devhints.io/"><h2 class="resource">DevHints</h2></a></li>
+                    <ul>
+                        <li>DevHits has a wealth of cheatsheets covering a huge variety
+                        of languages and concepts from appache to znc</li>
+                        <li>These Cheatsheets contain examples, explanations and useful
+                        pointers things like types, control flow and functions</li>
+                        <li>There are over 357 cheatsheets and they're subdivided into
+                        concepts such as "C-like languages", popularity and also
+                        alphabetically by language on the main page</li>
+                    </ul>
+                    <li><a href="https://exercism.io/"><h2 class="resource">Exercism</h2></a></li>
+                    <ul>
+                        <li>Exercism is a website full of exercises that give you the
+                        chance to practice your programming skills while problem solving
+                        and thinking critically</li>
+                        <li>It has 61 different languages with hundreds of different
+                        exercises for each</li>
+                        <li>These exercises are also arranged into a tree of concepts
+                        ensuring you get experience with all elements of a language,
+                        while also allowing you to focus on specific parts if you wish</li>
+                    </ul>
+                </ol>
+            </div>
+        </section>
     </article>
 </body>
 </html>
