Add images to repository and add to figures on image-page.html

--- a/image-page.html
+++ b/image-page.html
@@ -16,6 +16,27 @@
             <li><a href="./image-page.html">Gallery</a></li>
         </ul>
     </nav>
-
+    <article>
+        <section class="images">
+            <figure class="image" id="image-one">
+                <img src="./images/image-one.jpg">
+            </figure>
+            <figure class="image" id="image-two">
+                <img src="./images/image-two.jpg">
+            </figure>
+            <figure class="image" id="image-three">
+                <img src="./images/image-three.jpg">
+            </figure>
+            <figure class="image" id="image-four">
+                <img src="./images/image-four.jpg">
+            </figure>
+            <figure class="image" id="image-five">
+                <img src="./images/image-five.jpg">
+            </figure>
+            <figure class="image" id="image-six">
+                <img src="./images/image-six.jpg">
+            </figure>
+        </section>
+    </article>
 </body>
 </html>
