Add height to gallery images

--- a/image-page.html
+++ b/image-page.html
@@ -19,22 +19,22 @@
     <article>
         <section class="images">
             <figure class="image" id="image-one">
-                <img src="./images/image-one.jpg">
+                <img src="./images/image-one.jpg" class="gallery-image">
             </figure>
             <figure class="image" id="image-two">
-                <img src="./images/image-two.jpg">
+                <img src="./images/image-two.jpg" class="gallery-image">
             </figure>
             <figure class="image" id="image-three">
-                <img src="./images/image-three.jpg">
+                <img src="./images/image-three.jpg" class="gallery-image">
             </figure>
             <figure class="image" id="image-four">
-                <img src="./images/image-four.jpg">
+                <img src="./images/image-four.jpg" class="gallery-image">
             </figure>
             <figure class="image" id="image-five">
-                <img src="./images/image-five.jpg">
+                <img src="./images/image-five.jpg" class="gallery-image">
             </figure>
             <figure class="image" id="image-six">
-                <img src="./images/image-six.jpg">
+                <img src="./images/image-six.jpg" class="gallery-image">
             </figure>
         </section>
     </article>
