Replace all images with landscape image and add links to source

--- a/image-page.html
+++ b/image-page.html
@@ -19,22 +19,22 @@
     <article>
         <section class="images">
             <figure class="image" id="image-one">
-                <img src="./images/image-one.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/person-using-macbook-pro-574077/"><img src="./images/image-one.jpg" class="gallery-image"></a>
             </figure>
             <figure class="image" id="image-two">
-                <img src="./images/image-two.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/lines-of-code-2653362/"><img src="./images/image-two.jpg" class="gallery-image"></a>
             </figure>
             <figure class="image" id="image-three">
-                <img src="./images/image-three.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/photo-of-turned-on-laptop-computer-943096/"><img src="./images/image-three.jpg" class="gallery-image"></a>
             </figure>
             <figure class="image" id="image-four">
-                <img src="./images/image-four.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/computer-program-language-text-614117/"><img src="./images/image-four.jpg" class="gallery-image"></a>
             </figure>
             <figure class="image" id="image-five">
-                <img src="./images/image-five.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/pink-white-black-purple-blue-textile-web-scripts-97077/"><img src="./images/image-five.jpg" class="gallery-image"></a>
             </figure>
             <figure class="image" id="image-six">
-                <img src="./images/image-six.jpg" class="gallery-image">
+                <a href="https://www.pexels.com/photo/gray-laptop-computer-showing-html-codes-in-shallow-focus-photography-160107/"><img src="./images/image-six.jpg" class="gallery-image"></a>
             </figure>
         </section>
     </article>
