Add main content to index.html including article, sections, headings, paragraphs and figure

--- a/index.html
+++ b/index.html
@@ -16,5 +16,32 @@
             <li><a href="./image-page.html">Gallery</a></li>
         </ul>
     </nav>
+    <article>
+        <h1>Welcome to my practice personal website</h1>
+        <section>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
+            voluptate dolores accusamus officia? Dicta necessitatibus vero
+            consectetur harum libero maiores modi nobis deserunt facere ad
+            consequuntur, eaque minus animi nemo.</p>
+        </section>
+        <section>
+            <h2>My Skills</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum
+            atque eius ullam quam repudiandae ipsum fuga aperiam. Corporis
+            quibusdam, reprehenderit, labore necessitatibus error odit soluta
+            iure, dolores magni itaque officiis!</p>
+        </section>
+        <section>
+            <h2>Other Pages</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi a
+            excepturi distinctio iure accusamus ad in repellat obcaecati rerum.
+            Veritatis, quis? Modi nostrum sint, possimus ut ducimus deleniti
+            cupiditate vitae.</p>
+        </section>
+        <figure>
+            <img src="" alt="">
+        </figure>
+    </article>
 </body>
 </html>
